[package]
name = "rcf-cli"
version = "0.1.0"
description = "Command-line interface for Random Cut Forest anomaly detection"
repository = "https://github.com/ankane/rcf-cli"
license = "Apache-2.0"
authors = ["Andrew Kane <andrew@ankane.org>"]
edition = "2021"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
csv = "1"
rcf = { git = "https://github.com/aws/random-cut-forest-by-aws" }

[[bin]]
name = "rcf"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
strip = true
